Add boosting vs baggin image

--- a/notebooks/intro.ipynb
+++ b/notebooks/intro.ipynb
@@ -293,7 +293,12 @@
     "\n",
     "By doing this our team of models learns to make accurate predictions on all kinds of data, not just on the most common or easy observations. Also, if one of the individual models is very bad at making predictions on some kind of observation, it does not matter, as the other N-1 models will most likely make up for it.\n",
     "\n",
-    "Boosting should not be confused with Bagging, which is the other main family of ensemble methods: while in bagging the weak learners are trained in parallel using randomness, in boosting the learners are trained sequentially, in order to be able to perform the task of data weighting/filtering described in the previous paragraph."
+    "Boosting should not be confused with Bagging, which is the other main family of ensemble methods: while in bagging the weak learners are trained in parallel using randomness, in boosting the learners are trained sequentially, in order to be able to perform the task of data weighting/filtering described in the previous paragraph.\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <img src=\"https://miro.medium.com/max/1200/1*zTgGBTQIMlASWm5QuS2UpA.jpeg\"\n",
+    "  width=\"600\" height=\"350\">\n",
+    "</p>"
    ]
   },
   {
