Fix coming soon

--- a/notebooks/2.Workshop - Data Science - Binary Classification.ipynb
+++ b/notebooks/2.Workshop - Data Science - Binary Classification.ipynb
@@ -1785,6 +1785,7 @@
     "* bias–variance tradeoff,\n",
     "* cross validation,\n",
     "* hyperparameter optimization,\n",
+    "* model selection,\n",
     "* stacking,\n",
     "* and much more."
    ]
